Adding sponsor logos

--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -9,7 +9,7 @@
             <h2>PCDL - Users</h2>
         </div>
         <div class="col-md-offset-9">
-            <a href="{{ url_for(' }}" class="btn btn-block btn-lg btn-primary">Create User</a>
+            <a href="{{ url_for('auth.admin_register') }}" class="btn btn-block btn-lg btn-primary">Create User</a>
         </div>
     </div>
     <ul class="users">
