--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block navbar %}
-<div class="navbar navbar-inverse" role="navigation">
+<div class="navbar" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -19,7 +19,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}">PCDL</a>
+            <a class="navbar-brand" href="{{ url_for('main.index') }}"><img src="{{ url_for('static', filename='logo.png') }}" height="20px" />&nbsp;PCDL</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -67,6 +67,12 @@
 
     {% block page_content %}{% endblock %}
 </div>
+{% endblock %}
+
+{% block footer %}
+    <div class="footer">
+        <h3>Sponsored by:</h3>
+    </div>
 {% endblock %}
 
 {% block scripts %}
