--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -188,3 +188,92 @@ div.user-info {
     margin-left: 48px;
     min-height: 48px;
 }
+
+div.footer-inner img {
+    display: block;
+    margin: auto;
+}
+
+footer.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    background-color: #f5f5f5;
+}
+
+.navbar.navbar-default {
+    border-radius: 0px;
+    border-left: transparent;
+}
+
+#navbar-collapse {
+    border-bottom: 1px solid #266080;
+}
+
+.lower-nav {
+    color: #fff;
+    font-size: 20px;
+    padding: 23px 20px;
+    height: 150px;
+    color: #266080;
+    background-color: #fff;
+    border-bottom: 6px solid #266080;
+}
+
+#brand-logo {
+    background-size: cover;
+    position: absolute;
+}
+
+#brand-logo img {
+    width: 100%;
+    height: 130px;
+    min-width: 150px;
+}
+
+div.nopadding {
+    padding: 0;
+    margin: 0;
+}
+
+.nav-buttons {
+    border-radius: 0px;
+}
+
+.navbar-brand {
+    display: none;
+}
+
+.wrapper {
+    height: auto;
+    background-color: #fff;
+    margin-top: 0px;
+    padding: 10px 20px;
+}
+
+.well {
+    background-color: transparent;
+    border: 3px solid #428bca;
+    border-radius: 0px;
+    text-align: center;
+    font-size: 25px;
+}
+
+@media (max-width: 768px) {
+    .lower-nav {
+        font-size: 20px;
+        padding: 25px 20px;
+    }
+
+    .navbar-brand {
+        display: block;
+    }
+}
+
+@media (max-width: 480px) {
+    .lower-nav {
+        font-size: 18px;
+        padding: 20px 10px;
+    }
+}
