--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,79 +3,116 @@
 {% block title %}PCDL{% endblock %}
 
 {% block head %}
-{{ super() }}
-<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    {{ super() }}
+    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 {% endblock %}
 
 {% block navbar %}
-<div class="navbar" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{{ url_for('main.index') }}"><img src="{{ url_for('static', filename='logo.png') }}" height="20px" />&nbsp;PCDL</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('main.index') }}">Home</a></li>
-                {% if current_user.is_authenticated %}
-                <li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a></li>
-                {% endif %}
-                {% if current_user.is_administrator %}
-                <li><a href="{{ url_for('main.users') }}">Users</a></li>
-                {% endif %}
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                {% if current_user.can(Permission.MODERATE_COMMENTS) %}
-                <li><a href="{{ url_for('main.moderate') }}">Moderate Comments</a></li>
-                {% endif %}
-                {% if current_user.is_authenticated %}
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="{{ current_user.gravatar(size=18) }}">
-                        Account <b class="caret"></b>
-                    </a>
-                    <ul class="dropdown-menu">
-                        <li><a href="{{ url_for('auth.change_password') }}">Change Password</a></li>
-                        <li><a href="{{ url_for('auth.change_email_request') }}">Change Email</a></li>
-                        <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
-                    </ul>
-                </li>
-                {% else %}
-                <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
-                {% endif %}
-            </ul>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 col-sm-2 hidden-xs">
+                <div id="brand-logo">
+                    <img src="{{ url_for('static', filename='logo.png') }}" alt="Por Causa Del Llamado"/>
+                </div>
+            </div>
+            <div class="col-md-10 col-sm-10" style="padding-left: 0;">
+                <nav class="navbar navbar-default" role="navigation">
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                                data-target="#navbar-collapse"><span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+
+                        </button>
+                        <a class="navbar-brand" href="#">Por Causa Del Llamado</a>
+
+                    </div>
+                    <div class="collapse navbar-collapse" id="navbar-collapse">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="#">About Us</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearbook</a>
+                            </li>
+                            <li>
+                                <a href="#">Contactos</a>
+                            </li>
+                            {% if current_user.is_authenticated %}
+                                <li>
+                                    <a href="{{ url_for('main.users') }}">Users</a>
+                                </li>
+                            {% endif %}
+                            <li>
+                                {% if current_user.is_authenticated %}
+                                    <a href="{{ url_for('auth.logout') }}">Logout</a>
+                                {% else %}
+                                    <a href="{{ url_for('auth.login') }}">Login</a>
+                                {% endif %}
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="lower-nav">
+                        <h5>Pero de ninguna cosa hago caso, ni estimo preciosa mi vida para mí mismo, <br/>
+                            con tal que acabe mi carrera con gozo, y el ministerio que recibí del Señor Jesús, <br/>
+                            para dar testimonio del evangelio de la gracia de Dios.<br/><br/>
+                            Hechos 20:24
+                        </h5>
+                    </div>
+                </nav>
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
 
 {% block content %}
-<div class="container">
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
-    </div>
-    {% endfor %}
+    <div class="container">
+        {% for category, message in get_flashed_messages(with_categories=True) %}
+            <div class="alert alert-{{ category }}">
+                <button type="button" class="close" data-dismiss="alert">&times;</button>
+                {{ message }}
+            </div>
+        {% endfor %}
 
-    {% block page_content %}{% endblock %}
-</div>
+        {% block page_content %}{% endblock %}
+    </div>
+    <footer class="footer">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-2 footer-inner">
+                    <p class="text-muted">Sponsored by: </p>
+                </div>
+                <div class="col-md-2 footer-inner">
+                    <a href="http://amiesinternacional.com"><img
+                            src="{{ url_for('static', filename='amies_logo.png') }}" height="50px"/></a>
+                </div>
+                <div class="col-md-2 footer-inner">
+                    <a href="http://www.comhina.org/"><img src="{{ url_for('static', filename='cohmina_logo.png') }}"/></a>
+                </div>
+                <div class="col-md-2 footer-inner">
+                    <a href="http://new.nexusinternacional.org/"><img
+                            src="{{ url_for('static', filename='nexus_logo.png') }}"/></a>
+                </div>
+                <div class="col-md-2 footer-inner">
+                    <a href="https://www.partnersintl.org/"><img
+                            src="{{ url_for('static', filename='pm_international_logo.png') }}"/></a>
+                </div>
+                <div class="col-md-2 footer-inner">
+                    <a href="http://www.wecinternational.org/"><img
+                            src="{{ url_for('static', filename='wec_logo.png') }}"/></a>
+                </div>
+            </div>
+        </div>
+    </footer>
 {% endblock %}
 
 {% block footer %}
-    <div class="footer">
-        <h3>Sponsored by:</h3>
-    </div>
 {% endblock %}
 
 {% block scripts %}
-{{ super() }}
-{{ moment.include_moment() }}
+    {{ super() }}
+    {{ moment.include_moment() }}
 {% endblock %}
